--- a/36/index.html
+++ b/36/index.html
@@ -9,7 +9,7 @@
 
 <div class="group">
   <div class="div5"></div>
-  <div class="div6"></div>
+  <!-- <div class="div6"></div> -->
   <div class="div div1"></div>
   <div class="div div2"></div>
   <div class="div div3"></div>
